added search in category view

--- a/Search in category/index.html
+++ b/Search in category/index.html
@@ -16,19 +16,6 @@
       <span class="split" style="font-weight: 200;">|</span>
       <button class="register">Zarejestruj</button>
     </div>
-
-    <input id="menu-toggle" type="checkbox" />
-    <label class='menu-button-container' for="menu-toggle">
-      <div class='menu-button'></div>
-    </label>
-    <ul class="menu">
-      <li>One</li>
-      <li>Two</li>
-      <li>Three</li>
-      <li>Four</li>
-      <li>Five</li>
-    </ul>
-
   </div>
 	<div class="title">
     <p>DESER</p>
@@ -38,5 +25,43 @@
         <input class="search" placeholder="Szukaj"></input>
       </div>
     </form>
+  </div>
+  <div class="item-grid">
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
+    <div class="item-wrapper">
+      <img src="muffiny.png" class="item-picture">
+      <div class="item-label">
+        Pszne muffiny
+      </div>
+    </div>
   </div>
 </body>
