current state recipe creation

--- a/Recipe creator/index.html
+++ b/Recipe creator/index.html
@@ -12,13 +12,11 @@
       <span style="vertical-align: middle">ProKuchnix</span>
     </div>
     <div class="topbar-buttons">
-      <button class="login">Zaloguj</button>
-      <span class="split" style="font-weight: 200;">|</span>
-      <button class="register">Zarejestruj</button>
+      <img style="vertical-align: middle" src="user_info.png">
     </div>
   </div>
 	<div class="title">
-    <p>DESER</p>
+    <p>KREATOR PRZEPISÓW</p>
   </div>
   <div class="recipe-creator">
     <div class="activity">
@@ -27,8 +25,8 @@
     </div>
     <div class="activity">
       <p>Dodaj</p>
-      <input>
-      <input>
+      <input placeholder="produkt">
+      <input placeholder="ilość">
       <select name="units" id="units">
         <option value="gram">gram</option>
         <option value="liter">mililiter</option>
