Add ingredient mocked

--- a/Add ingredient/index.html
+++ b/Add ingredient/index.html
@@ -4,6 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="topbar">
@@ -15,10 +16,9 @@
       <img style="vertical-align: middle" src="user_info.png">
     </div>
   </div>
-  <div class="centered-container">
-    <div class="recipe-start">
-      <p>ROZPOCZYNASZ PRZEPIS</p>
-      <p style="font-size: 64pt; font-weight: regular">Muffinki</p>
-    </div>
+	<div class="title">
+    <img id="action-img" src="ingredient-hi_res.png">
+    <p style="margin-top: 40px">Wsyp 200g mąki</p>
+    <button id="start-button">Gotowe!</button>
   </div>
 </body>
