--- a/Mix/index.html
+++ b/Mix/index.html
@@ -4,6 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="topbar">
@@ -16,6 +17,13 @@
     </div>
   </div>
 	<div class="title">
-    <p>KREATOR PRZEPISÓW</p>
+    <img id="action-img" src="mixer-hi_res.png">
+    <p style="margin-top: 60px">Trwa mieszanie</p>
+  </div>
+  <div class="loading-bar">
+    <span style="width: 50%">&nbsp;</span>
+    <div>
+      <p>50%</p>
+    </div>
   </div>
 </body>
