--- a/End/index.html
+++ b/End/index.html
@@ -4,6 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="topbar">
@@ -16,6 +17,8 @@
     </div>
   </div>
 	<div class="title">
-    <p>KREATOR PRZEPISÓW</p>
+    <p>UKOŃCZYŁEŚ/AŚ PRZEPIS</p>
+    <p style="font-size: 64pt; margin-top: 30px">MUFFINKI</p>
+    <button id="finish-button">Wróć do przeglądania</button>
   </div>
 </body>
